# pfi-project-template

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: background.md
example_project/: __init__.py  config.py  dataset.py
notebooks/: 01-report.ipynb
reports/: data.html
scripts/: check_data.py
